开放教师意向填写

--- a/assets/css/account.scss
+++ b/assets/css/account.scss
@@ -199,6 +199,7 @@
   }
 }
 .form{
+	float:none;
   min-height: 550px;
   .form_group{
     margin-bottom: 20px;
@@ -213,7 +214,7 @@
     .form_ctl{
       margin-left: 12px;
       float: left;
-      width: 700px;
+      width: 100px;
       position: relative;
       z-index: 9;
     }
@@ -254,6 +255,7 @@
     border: 1px solid #e7e7e7;
   }
   .upload_ctl{
+		width:200px;
     .img_box{
       width: 120px;
       height: 120px;
